--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
   <div class="static">
     <nav class="nav-bar">
       <a href="#top">Svadba na veteránoch</a>
-
-      <ul>
+      <ul id="remove">
         <li>
           <a href="#about">O nás</a>
         </li>
@@ -50,26 +49,27 @@
         </li>
       </ul>
 
-      <!-- Dropdown Trigger 
-  <a id="hidden-menu" class='dropdown-button ' href='#' data-activates='dropdown1'>
-    <i class="fa fa-bars" aria-hidden="true"></i>
-  </a>
-  
-    
-    <ul id='dropdown1' class='dropdown-content'>
-       <li>
-          <a href="#about">O nás</a>
-        </li>
-        <li>
-          <a href="#recension">Recenzie</a>
-        </li>
-        <li>
-          <a href="#gallery">Galeria</a>
-        </li>
-        <li>
-          <a href="#gallery">Kontakt</a>
-        </li>
-    </ul>  -->
+
+      <section id="show">
+        <a id="hidden-menu" class='dropdown-button ' href='#' data-activates='dropdown1'>
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </a>
+        <ul id='dropdown1' class='dropdown-content'>
+          <li>
+            <a href="#about">O nás</a>
+          </li>
+          <li>
+            <a href="#recension">Recenzie</a>
+          </li>
+          <li>
+            <a href="#gallery">Galeria</a>
+          </li>
+          <li>
+            <a href="#contact">Kontakt</a>
+          </li>
+        </ul>
+      </section>
+
 
     </nav>
   </div>
@@ -108,6 +108,9 @@
   </section>
 
   <article class="about-me">
+    <div class="photo-of-me">
+
+    </div>
     <div class="text">
       <h2>Vitajte na nasej stranke</h2>
       <p>Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels bonbon
@@ -116,152 +119,157 @@
         dessert candy jujubes candy canes liquorice. Sesame snaps topping sugar plum soufflé marshmallow danish c andy chocolate
         bar lemon drops. Candy chupa chups jelly liqu orice toffee sweet ice cream apple pie chocolate bar. Pie wa fer lollipop.
         Cheesecake lollipop candy.</p>
-    </div>
-    <div class="photo-of-me">
-
-    </div>
-  </article>
-
-  <div id="recension" class="carousel scrollspy">
-    <a class="carousel-item" href="#one!">
-      <div>
-        <h4>Maria & Jozef</h4>
-        <p class="date">01/12/2015</p>
-        <p>&rdquo; Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels
-          bonbon &ldquo;
-        </p>
       </div>
-    </a>
-    <a class="carousel-item" href="#two!">
-      <div>
-        <h4>Maria & Jozef</h4>
-        <p class="date">01/12/2015</p>
-        <p>&rdquo; Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels
-          bonbon sugar plum pudding bonbon cotton ca &ldquo;</p>
 
-      </div>
-    </a>
-    <a class="carousel-item" href="#three!">
-      <div>
-        <h4>Maria & Jozef</h4>
-        <p class="date">01/12/2015</p>
-        <p>&rdquo; ruitcake macaroon fruitcake. Ca ramels bonbon sugar plum pudding bonbon cotton ca &ldquo;</p>
-      </div>
-    </a>
-    <a class="carousel-item" href="#four!">
-      <div>
-        <h4>Maria & Jozef</h4>
-        <p class="date">01/12/2015</p>
-        <p>&rdquo; Fruitcake chocolate cake bbon cotton ca &ldquo;</p>
-      </div>
-    </a>
-    <a class="carousel-item" href="#five!">
-      <div>
-        <h4>Maria & Jozef</h4>
-        <p class="date">01/12/2015</p>
-        <p>&rdquo; Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels
-          bonbon sugar plum pudding bonbon cotton ca &ldquo;</p>
-      </div>
-    </a>
-  </div>
+    </article>
 
-  <script type="text/javascript">
-    $(document).ready(function () {
-      $('.carousel').carousel();
-      $('.scrollspy').scrollSpy();
-      $('input#input_text, textarea#textarea1').characterCounter();
-    });
-  </script>
+    <div id="recension" class="carousel scrollspy">
+      <a class="carousel-item" href="#one!">
+        <div>
+          <h4>Maria & Jozef</h4>
+          <p class="date">01/12/2015</p>
+          <p>&rdquo; Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels
+            bonbon &ldquo;
+          </p>
+        </div>
+      </a>
+      <a class="carousel-item" href="#two!">
+        <div>
+          <h4>Maria & Jozef</h4>
+          <p class="date">01/12/2015</p>
+          <p>&rdquo; Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels
+            bonbon sugar plum pudding bonbon cotton ca &ldquo;</p>
 
-  <div id="gallery" class="gallery scrollspy">
-    <div class="thumb test">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
+          </div>
+        </a>
+        <a class="carousel-item" href="#three!">
+          <div>
+            <h4>Maria & Jozef</h4>
+            <p class="date">01/12/2015</p>
+            <p>&rdquo; ruitcake macaroon fruitcake. Ca ramels bonbon sugar plum pudding bonbon cotton ca &ldquo;</p>
+          </div>
+        </a>
+        <a class="carousel-item" href="#four!">
+          <div>
+            <h4>Maria & Jozef</h4>
+            <p class="date">01/12/2015</p>
+            <p>&rdquo; Fruitcake chocolate cake bbon cotton ca &ldquo;</p>
+          </div>
+        </a>
+        <a class="carousel-item" href="#five!">
+          <div>
+            <h4>Maria & Jozef</h4>
+            <p class="date">01/12/2015</p>
+            <p>&rdquo; Fruitcake chocolate cake biscuit bear claw dessert. Topping dragée pie fruitcake macaroon fruitcake. Ca ramels
+              bonbon sugar plum pudding bonbon cotton ca &ldquo;</p>
+            </div>
+          </a>
+        </div>
 
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb3">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb ">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb3">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb thumb2">
-      <img src="img/03.jpg" alt="" />
-    </div>
-    <div class="thumb">
-      <img src="img/03.jpg" alt="" />
-    </div>
-  </div>
+        <script type="text/javascript">
+        $(document).ready(function () {
+          $('.carousel').carousel();
+          $('.scrollspy').scrollSpy();
+          $('input#input_text, textarea#textarea1').characterCounter();
+          if ($(window).width() < 800) {
+            $("#show").add("#show").css("visibility", "visible");
+            $("#remove").remove();
+          }
+          else {
+            $("#remove").add("#remove").css("visibility", "visible");
+          }
+        });
+        </script>
+
+        <div id="gallery" class="gallery scrollspy">
+          <div class="thumb test">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb3">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb ">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb3">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb thumb2">
+            <img src="img/03.jpg" alt="" />
+          </div>
+          <div class="thumb">
+            <img src="img/03.jpg" alt="" />
+          </div>
+        </div>
 
 
-  <div id="contact" class="contact scrollspy">
-    <section>
-        <h4>Svadba na veteranoch</h4>
-        <h4>Martin Martin</h4>
-        <h5>0908333843</h5>
-        <h5>info@svadbanaveteranoch.sk</h5>
-        <p>Informacie o cennikch na vyziadanie cez e-mail.</p>
-    </section>
-    <section>
-      <form>
-      <div class="input-field">
-        <input id="email" type="email" class="validate">
-        <label for="email" data-error="wrong" data-success="right">Email</label>
-      </div>
-    </form>
-    <form>
-      <div class="input-field">
-        <input id="input_text" type="text" data-length="10">
-        <label for="input_text">Predmet</label>
-      </div>
-      <div class="input-field ">
-        <textarea id="textarea1" class="materialize-textarea" data-length="120"></textarea>
-        <label for="textarea1">Obsah</label>
-      </div>
-    </form>
-    <button class="btn waves-effect waves-light light-blue accent-2" type="submit" name="action">
-      <i class="material-icons right">send</i>
-    </button>
-  </section>
+        <div id="contact" class="contact scrollspy">
+          <section>
+            <h4>Svadba na veteranoch</h4>
+            <h4>Martin Martin</h4>
+            <h5>0908333843</h5>
+            <h5>info@svadbanaveteranoch.sk</h5>
+            <p>Informacie o cennikch na vyziadanie cez e-mail.</p>
+          </section>
+          <section>
+            <form>
+              <div class="input-field">
+                <input id="email" type="email" class="validate">
+                <label for="email" data-error="wrong" data-success="right">Email</label>
+              </div>
+            </form>
+            <form>
+              <div class="input-field">
+                <input id="input_text" type="text" data-length="10">
+                <label for="input_text">Predmet</label>
+              </div>
+              <div class="input-field ">
+                <textarea id="textarea1" class="materialize-textarea" data-length="120"></textarea>
+                <label for="textarea1">Obsah</label>
+              </div>
+            </form>
+            <button class="btn waves-effect waves-light light-blue accent-2" type="submit" name="action">
+              <i class="material-icons right">send</i>
+            </button>
+          </section>
 
-  </div>
+        </div>
 
-  <footer>
-    <p>copyright &copy; svadbanaveteranoch.sk 2018
-      <a href="http://dizajnerske.sk">photo+design+code</a>
-    </p>
-  </footer>
+        <footer>
+          <p>copyright &copy; svadbanaveteranoch.sk 2018
+            <a href="http://dizajnerske.sk">photo+design+code</a>
+          </p>
+        </footer>
 
-  <script src="js/script.js"></script>
+        <script src="js/script.js"></script>
 
-  <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
 
-</body>
+      </body>
 
-</html>
+      </html>
