[FEATURE] - added meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Svadba na veteránoch veteran svadba vychod svadba na veterane">
+  <meta name="twitter:card" value="summary">
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Svadba na veteránoch" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="http://www.svadbanaveteranoch.sk/" />
+  <meta property="og:image" content="http://www.svadbanaveteranoch.sk/image.jpg" />
+  <meta property="og:description" content="Svadba na veteránoch" />
 
-  <title>Svadba na veteranoch</title>
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Svadba na veteránoch">
+  <meta itemprop="description" content="Svadba na veteránoch">
+  <meta itemprop="image" content="http://www.svadbanaveteranoch.sk/image.jpg">
+
+  <meta name="author" content="Michaela Risko">
+
+  <title>Svadba na veteránoch</title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
